feat: use component status in UI

--- a/src/MakaMek.Avalonia/MakaMek.Avalonia/Controls/UnitComponentsPanel.axaml
+++ b/src/MakaMek.Avalonia/MakaMek.Avalonia/Controls/UnitComponentsPanel.axaml
@@ -33,7 +33,7 @@
                                                            HorizontalAlignment="Center"
                                                            TextWrapping="Wrap"/>
                                                 <TextBlock Grid.Column="2"
-                                                           Text="{Binding IsActive}" 
+                                                           Text="{Binding Status}" 
                                                            Classes="body" Margin="5,0"
                                                            VerticalAlignment="Center"
                                                            HorizontalAlignment="Right"/>
