--- a/src/MakaMek.Avalonia/MakaMek.Avalonia/Views/TemplatedControls/GamePanel.axaml
+++ b/src/MakaMek.Avalonia/MakaMek.Avalonia/Views/TemplatedControls/GamePanel.axaml
@@ -13,7 +13,7 @@
                         BorderThickness="1"
                         CornerRadius="8"
                         Width="300"
-                        MaxHeight="400"
+                        Height="400"
                         HorizontalAlignment="Right"
                         VerticalAlignment="Bottom"
                         Margin="10">
