--- a/src/MakaMek.Avalonia/MakaMek.Avalonia/Controls/UnitHealthIndicator.axaml
+++ b/src/MakaMek.Avalonia/MakaMek.Avalonia/Controls/UnitHealthIndicator.axaml
@@ -6,6 +6,17 @@
              x:Class="Sanet.MakaMek.Avalonia.Controls.UnitHealthIndicator">
     <Grid ColumnDefinitions="2*,2*,2*,2*,2*,*,2*,2*,2*"
           RowDefinitions="*,*,*,*,*,*,*,*,*">
+        <TextBlock Grid.Row="0" Grid.Column="3" Text="LT" Classes="label" HorizontalAlignment="Center" Margin="2,0"/>
+        <TextBlock Grid.Row="0" Grid.Column="1" Text="RT" Classes="label" HorizontalAlignment="Center" Margin="2,0"/>
+        <TextBlock Grid.Row="6" Grid.Column="2" Text="CT" Classes="label" HorizontalAlignment="Center" Margin="2,0"/>
+        <TextBlock Grid.Row="8" Grid.Column="0" Text="RL" Classes="label" HorizontalAlignment="Center" Margin="2,0"/>
+        <TextBlock Grid.Row="8" Grid.Column="4" Text="LL" Classes="label" HorizontalAlignment="Center" Margin="2,0"/>
+        <TextBlock Grid.Row="1" Grid.Column="0" Text="RA" Classes="label" HorizontalAlignment="Center" Margin="2,0"/>
+        <TextBlock Grid.Row="1" Grid.Column="4" Text="LA" Classes="label" HorizontalAlignment="Center" Margin="2,0"/>
+        <TextBlock Grid.Row="0" Grid.Column="8" Text="LT" Classes="label" HorizontalAlignment="Center" Margin="2,0"/>
+        <TextBlock Grid.Row="0" Grid.Column="6" Text="RT" Classes="label" HorizontalAlignment="Center" Margin="2,0"/>
+        <TextBlock Grid.Row="0" Grid.Column="7" Text="CT" Classes="label" HorizontalAlignment="Center" Margin="2,0"/>
+        
         <!-- Head -->
         <ProgressBar Name="HeadArmor" Grid.Row="0" Grid.Column="2" Classes="unitPartHealthBar mechArmor"/>
         <ProgressBar Name="HeadStructure" Grid.Row="1" Grid.Column="2" Classes="unitPartHealthBar mechStructure"/>
