--- a/src/MakaMek.Avalonia/MakaMek.Avalonia/Views/BattleMapView.axaml
+++ b/src/MakaMek.Avalonia/MakaMek.Avalonia/Views/BattleMapView.axaml
@@ -120,116 +120,10 @@
             </ListBox>
         </Grid>
         
-        <templatedControls:GamePanel
+        <controls:WeaponSelectionPanel
             x:Name="WeaponSelectionPanel"
-            IsVisible="{Binding IsWeaponSelectionVisible}"
-            Title="Select weapons to attack"
-            CloseCommand="{Binding CloseWeaponSelectionCommand}"
             HorizontalAlignment="Right"
-            VerticalAlignment="Center">
-            <Grid RowDefinitions="Auto,Auto,Auto,Auto,*"
-                  ColumnDefinitions="Auto,*"
-                  Width="300">
-                <TextBlock 
-                    Margin="10,0,0,0"
-                    Grid.Column="0"
-                    Grid.Row="0"
-                    FontFamily="{StaticResource AwesomeFontSolid}" Text="&#xe19b;"/>
-                <TextBlock
-                    Margin="10,0,0,0"
-                    Grid.Row="0"
-                    Grid.Column="1"
-                    Text="{Binding Attacker.Name}"/>
-                <TextBlock 
-                        Margin="10,0,0,0"
-                        Grid.Column="0"
-                        Grid.Row="1"
-                        FontFamily="{StaticResource AwesomeFontSolid}" Text="&#xf05b;"/>
-                <TextBlock
-                        Margin="10,0,0,0"
-                        Grid.Row="1"
-                        Grid.Column="1"
-                        Text="{Binding SelectedUnit.Name}"/>
-                <ScrollViewer Grid.Row="4" Grid.Column="0" Grid.ColumnSpan="2">
-                    <ItemsControl 
-                        Margin="10"
-                        ItemsSource="{Binding WeaponSelectionItems}">
-                        <ItemsControl.ItemTemplate>
-                            <DataTemplate x:DataType="wrappers:WeaponSelectionViewModel">
-                                <Grid ColumnDefinitions="Auto,*,Auto,Auto"
-                                      Background="{Binding Weapon, Converter={StaticResource ComponentStatusBackgroundConverter}}"
-                                      RowDefinitions="*,*,*">
-                                    <CheckBox 
-                                        Grid.Row="0"
-                                        Grid.Column="0"
-                                        Grid.RowSpan="3"
-                                             IsChecked="{Binding IsSelected, Mode=TwoWay}"
-                                             IsEnabled="{Binding IsEnabled}"
-                                             Margin="0,0,10,0"/>
-                                    
-                                        <TextBlock Grid.Column="1" Text="{Binding Name}"
-                                                 FontWeight="Bold"/>
-                                        <StackPanel
-                                            Grid.Column="1"
-                                            Grid.Row="1"
-                                            Orientation="Horizontal"
-                                            Spacing="5">
-                                            <StackPanel Orientation="Horizontal" Spacing="2">
-                                                <TextBlock FontFamily="{StaticResource AwesomeFontSolid}" Text="&#x26a1;"/>
-                                                <TextBlock Text="{Binding Damage}"/>
-                                            </StackPanel>
-                                            <StackPanel Orientation="Horizontal" Spacing="2">
-                                                <TextBlock FontFamily="{StaticResource AwesomeFontSolid}" Text="&#xf06d;"/>
-                                                <TextBlock Text="{Binding Heat}"/>
-                                            </StackPanel>
-                                            <StackPanel Orientation="Horizontal" Spacing="2"
-                                                      IsVisible="{Binding RequiresAmmo}">
-                                                <TextBlock FontFamily="{StaticResource AwesomeFontSolid}" Text="&#xf1e2;"/>
-                                                <TextBlock Text="{Binding Ammo}"/>
-                                            </StackPanel>
-                                        </StackPanel>
-                                    <TextBlock
-                                        Grid.Column="2"
-                                        Grid.Row="0"
-                                        Grid.RowSpan="3"
-                                        VerticalAlignment="Center"
-                                        Text="{Binding HitProbabilityText}" 
-                                        FontSize="20"
-                                               Foreground="{Binding HitProbability, Converter={StaticResource HitProbabilityColorConverter}}"
-                                               FontWeight="Bold"/>
-                                    <Button
-                                        Grid.Column="3"
-                                        Grid.Row="0"
-                                        Grid.RowSpan="3"
-                                        VerticalAlignment="Center"
-                                        Margin="2,0,0,0" 
-                                            IsVisible="{Binding AttackPossibilityDescription, Converter={StaticResource StringNotEmptyToBoolConverter}}"
-                                            Background="Transparent" 
-                                            BorderThickness="0">
-                                        <Button.Content>
-                                            <TextBlock FontFamily="{StaticResource AwesomeFontSolid}" Text="&#xF05A;" />
-                                        </Button.Content>
-                                        <Button.Flyout>
-                                            <Flyout Placement="TopEdgeAlignedRight">
-                                                <TextBlock Text="{Binding AttackPossibilityDescription}" 
-                                                           TextWrapping="Wrap" 
-                                                           MaxWidth="300"/>
-                                            </Flyout>
-                                        </Button.Flyout>
-                                    </Button>
-                                    <TextBlock Grid.Row="2"
-                                               Grid.Column="1"
-                                               Text="{Binding Target.Name}"
-                                             Foreground="Gray"
-                                             FontStyle="Italic"/>
-                                    
-                                </Grid>
-                            </DataTemplate>
-                        </ItemsControl.ItemTemplate>
-                    </ItemsControl>
-                </ScrollViewer>
-            </Grid>
-        </templatedControls:GamePanel>
+            VerticalAlignment="Center"/>
         
         <StackPanel HorizontalAlignment="Right"
                     VerticalAlignment="Bottom"
