feat: list unit events in UI panel

--- a/src/MakaMek.Avalonia/MakaMek.Avalonia/Views/BattleMapView.axaml
+++ b/src/MakaMek.Avalonia/MakaMek.Avalonia/Views/BattleMapView.axaml
@@ -192,6 +192,12 @@
                     </TabItem.Header>
                     <controls:UnitComponentsPanel Unit="{Binding SelectedUnit}" />
                 </TabItem>
+                <TabItem>
+                    <TabItem.Header>
+                        <TextBlock Classes="h3" FontFamily="{StaticResource AwesomeFontSolid}" Text="&#xf0e0;"/>
+                    </TabItem.Header>
+                    <controls:UnitEventsPanel/>
+                </TabItem>
             </TabControl>
         </templatedControls:GamePanel>
 
