--- a/src/MakaMek.Avalonia/MakaMek.Avalonia/Controls/DirectionSelector.axaml
+++ b/src/MakaMek.Avalonia/MakaMek.Avalonia/Controls/DirectionSelector.axaml
@@ -1,11 +1,12 @@
 <UserControl xmlns="https://github.com/avaloniaui"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+             xmlns:controls="clr-namespace:Sanet.MakaMek.Avalonia.Controls"
              x:Class="Sanet.MakaMek.Avalonia.Controls.DirectionSelector">
     <Canvas x:Name="ButtonsContainer">
         <!-- Top button -->
         <Button x:Name="TopButton" Canvas.Left="59" Canvas.Top="0" Width="50" Height="50"
                 Click="TopButton_Click">
-            <Path Data="M 15,0 L 0,30 L 30,30 Z" Fill="{DynamicResource ForegroundBrush}"/>
+            <Path Data="M 15,0 L 0,30 L 30,30 Z" Fill="{Binding Foreground, RelativeSource={RelativeSource AncestorType=controls:DirectionSelector}}"/>
         </Button>
         
         <!-- Top Right button -->
@@ -14,7 +15,7 @@
             <Button.RenderTransform>
                 <RotateTransform Angle="60" CenterX="0" CenterY="0"/>
             </Button.RenderTransform>
-            <Path Data="M 15,0 L 0,30 L 30,30 Z" Fill="{DynamicResource ForegroundBrush}"/>
+            <Path Data="M 15,0 L 0,30 L 30,30 Z" Fill="{Binding Foreground, RelativeSource={RelativeSource AncestorType=controls:DirectionSelector}}"/>
         </Button>
         
         <!-- Bottom Right button -->
@@ -23,7 +24,7 @@
             <Button.RenderTransform>
                 <RotateTransform Angle="120" CenterX="0" CenterY="0"/>
             </Button.RenderTransform>
-            <Path Data="M 15,0 L 0,30 L 30,30 Z" Fill="{DynamicResource ForegroundBrush}"/>
+            <Path Data="M 15,0 L 0,30 L 30,30 Z" Fill="{Binding Foreground, RelativeSource={RelativeSource AncestorType=controls:DirectionSelector}}"/>
         </Button>
         
         <!-- Bottom button -->
@@ -32,7 +33,7 @@
             <Button.RenderTransform>
                 <RotateTransform Angle="180" CenterX="0" CenterY="0"/>
             </Button.RenderTransform>
-            <Path Data="M 15,0 L 0,30 L 30,30 Z" Fill="{DynamicResource ForegroundBrush}"/>
+            <Path Data="M 15,0 L 0,30 L 30,30 Z" Fill="{Binding Foreground, RelativeSource={RelativeSource AncestorType=controls:DirectionSelector}}"/>
         </Button>
         
         <!-- Bottom Left button -->
@@ -41,7 +42,7 @@
             <Button.RenderTransform>
                 <RotateTransform Angle="240" CenterX="0" CenterY="0"/>
             </Button.RenderTransform>
-            <Path Data="M 15,0 L 0,30 L 30,30 Z" Fill="{DynamicResource ForegroundBrush}"/>
+            <Path Data="M 15,0 L 0,30 L 30,30 Z" Fill="{Binding Foreground, RelativeSource={RelativeSource AncestorType=controls:DirectionSelector}}"/>
         </Button>
         
         <!-- Top Left button -->
@@ -50,7 +51,7 @@
             <Button.RenderTransform>
                 <RotateTransform Angle="300" CenterX="0" CenterY="0"/>
             </Button.RenderTransform>
-            <Path Data="M 15,0 L 0,30 L 30,30 Z" Fill="{DynamicResource ForegroundBrush}"/>
+            <Path Data="M 15,0 L 0,30 L 30,30 Z" Fill="{Binding Foreground, RelativeSource={RelativeSource AncestorType=controls:DirectionSelector}}"/>
         </Button>
     </Canvas>
 </UserControl>
