--- a/src/MakaMek.Avalonia/MakaMek.Avalonia/Controls/UnitHeatLevelPanel.axaml
+++ b/src/MakaMek.Avalonia/MakaMek.Avalonia/Controls/UnitHeatLevelPanel.axaml
@@ -8,7 +8,7 @@
              x:Class="Sanet.MakaMek.Avalonia.Controls.UnitHeatLevelPanel"
              mc:Ignorable="d">
     <UserControl.Resources>
-        <converters:NullToVisibilityConverter x:Key="NullToVisibilityConverter"/>
+        <converters:NullToBooleanConverter x:Key="NullToVisibilityConverter"/>
         <converters:ModifierToTextConverter x:Key="ModifierToTextConverter"/>
     </UserControl.Resources>
     <StackPanel>
