chore: reuse styling, reduce usage of hardcoded resiurces

--- a/src/MakaMek.Avalonia/MakaMek.Avalonia/App.axaml
+++ b/src/MakaMek.Avalonia/MakaMek.Avalonia/App.axaml
@@ -14,7 +14,7 @@
             <converters:ContrastingForegroundConverter x:Key="ContrastingForegroundConverter"/>
             <converters:GreaterThanValueConverter x:Key="GreaterThanValueConverter"/>
             <converters:CollectionToVisibilityConverter x:Key="CollectionToVisibilityConverter"/>
-            <converters:BooleanToColorConverter x:Key="BooleanToColorConverter"/>
+            <converters:ConsciousnessColorConverter x:Key="ConsciousnessColorConverter"/>
             <converters:ConsciousnessStatusConverter x:Key="ConsciousnessStatusConverter"/>
             <ResourceDictionary.MergedDictionaries>
                 <ResourceInclude Source="avares://Sanet.MakaMek.Avalonia/Styles/Colors.axaml"/>
