--- a/src/MakaMek.Avalonia/MakaMek.Avalonia/Styles/Typography.axaml
+++ b/src/MakaMek.Avalonia/MakaMek.Avalonia/Styles/Typography.axaml
@@ -47,6 +47,13 @@
     </Style>
     
     <!-- Label Styles -->
+    <Style Selector="TextBlock.labelLarge">
+        <Setter Property="FontSize" Value="14"/>
+        <Setter Property="FontWeight" Value="SemiBold"/>
+        <Setter Property="VerticalAlignment" Value="Center"/>
+        <Setter Property="Foreground" Value="{DynamicResource TextBrush}"/>
+    </Style>
+    
     <Style Selector="TextBlock.label">
         <Setter Property="FontSize" Value="12"/>
         <Setter Property="FontWeight" Value="SemiBold"/>
