chore: move converter declaration closer to where it used

--- a/src/MakaMek.Avalonia/MakaMek.Avalonia/Controls/UnitPilotInfoPanel.axaml
+++ b/src/MakaMek.Avalonia/MakaMek.Avalonia/Controls/UnitPilotInfoPanel.axaml
@@ -9,6 +9,8 @@
              mc:Ignorable="d">
     <UserControl.Resources>
         <converters:NullToBooleanConverter x:Key="NullToVisibilityConverter"/>
+        <converters:ConsciousnessColorConverter x:Key="ConsciousnessColorConverter"/>
+        <converters:ConsciousnessStatusConverter x:Key="ConsciousnessStatusConverter"/>
     </UserControl.Resources>
     
     <StackPanel Classes="verticalSpaced" IsVisible="{Binding Converter={StaticResource NullToVisibilityConverter}}">
