feat: rename style to keep naming consistent

--- a/src/MakaMek.Avalonia/MakaMek.Avalonia/Controls/UnitHeatLevelPanel.axaml
+++ b/src/MakaMek.Avalonia/MakaMek.Avalonia/Controls/UnitHeatLevelPanel.axaml
@@ -26,7 +26,7 @@
                 </ProgressBar.Foreground>
             </ProgressBar>
             <TextBlock Text="{Binding CurrentHeat}"
-                     Classes="labelProgressBar"/>
+                     Classes="progressBarLabel"/>
         </Grid>
         <!-- Movement Heat Penalty Tag -->
         <WrapPanel ItemSpacing="2" LineSpacing="2" Orientation="Horizontal">
