fix: use localization service for aimed location label

--- a/src/MakaMek.Avalonia/MakaMek.Avalonia/Views/BattleMapView.axaml
+++ b/src/MakaMek.Avalonia/MakaMek.Avalonia/Views/BattleMapView.axaml
@@ -127,12 +127,12 @@
 
         <!-- Body Part Selector for Aimed Shots -->
         <templatedControls:GamePanel
-            IsVisible="{Binding IsBodyPartSelectorVisible}"
+            IsVisible="{Binding IsUnitPartSelectorVisible}"
             Title="Select Target Location"
             CloseCommand="{Binding HideBodyPartSelectorCommand}"
             HorizontalAlignment="Center"
             VerticalAlignment="Center">
-            <controls:UnitPartSelector DataContext="{Binding BodyPartSelector}" />
+            <controls:UnitPartSelector DataContext="{Binding UnitPartSelector}" />
         </templatedControls:GamePanel>
         
         <StackPanel HorizontalAlignment="Right"
