--- a/src/MakaMek.Avalonia/MakaMek.Avalonia/Controls/UnitPartItem.axaml
+++ b/src/MakaMek.Avalonia/MakaMek.Avalonia/Controls/UnitPartItem.axaml
@@ -3,6 +3,7 @@
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
              xmlns:wrappers="clr-namespace:Sanet.MakaMek.Presentation.ViewModels.Wrappers;assembly=Sanet.MakaMek.Presentation"
+             xmlns:ns="clr-namespace:Sanet.MakaMek.Avalonia.Controls"
              mc:Ignorable="d" d:DesignWidth="80" d:DesignHeight="120"
              x:Class="Sanet.MakaMek.Avalonia.Controls.UnitPartItem"
              x:DataType="wrappers:UnitPartViewModel"
@@ -54,7 +55,8 @@
     </UserControl.Styles>
     
     <Button
-        Click="OnButtonClick"
+        Command="{Binding $parent[ns:UnitPartItem].Command}"
+        CommandParameter="{Binding $parent[ns:UnitPartItem].CommandParameter}"
         Classes="bodyPartButton"
             IsEnabled="{Binding IsSelectable}">
         <StackPanel HorizontalAlignment="Stretch" VerticalAlignment="Stretch">
@@ -65,15 +67,15 @@
             <!-- Armor Progress Bar -->
             <ProgressBar Classes="unitPartArmor"
                          Minimum="0"
-                         Maximum="1"
-                         Value="{Binding ArmorPercentage}"
+                         Maximum="{Binding MaxArmor}"
+                         Value="{Binding CurrentArmor}"
                          IsVisible="{Binding MaxArmor, Converter={StaticResource GreaterThanValueConverter}, ConverterParameter=0}"/>
             
             <!-- Structure Progress Bar -->
             <ProgressBar Classes="unitPartStructure"
                          Minimum="0"
-                         Maximum="1"
-                         Value="{Binding StructurePercentage}"
+                         Maximum="{Binding MaxStructure}"
+                         Value="{Binding CurrentStructure}"
                          IsVisible="{Binding MaxStructure, Converter={StaticResource GreaterThanValueConverter}, ConverterParameter=0}"/>
             
             <!-- Hit Probability -->
